<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/food_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/default_nama"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/food_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/default_harga"
                android:textColor="#000000"
                app:layout_constraintEnd_toStartOf="@+id/decrease_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_name" />

            <TextView
                android:id="@+id/count_sold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/default_terjual"
                android:textColor="#000000"
                app:layout_constraintEnd_toStartOf="@+id/decrease_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_price" />

            <TextView
                android:id="@+id/food_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:ellipsize="end"
                android:maxLines="100"
                android:text="@string/default_deskripsi"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/count_sold" />

            <Button
                android:id="@+id/add_menu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="#154c79"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:cornerRadius="14dp"
                app:iconSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/food_name" />

            <TextView
                android:id="@+id/menu_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="0"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@id/add_menu"
                app:layout_constraintEnd_toStartOf="@id/decrease_menu"
                app:layout_constraintStart_toEndOf="@id/add_menu"
                app:layout_constraintTop_toTopOf="@id/decrease_menu" />

            <Button
                android:id="@+id/decrease_menu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="#154c79"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:cornerRadius="14dp"
                app:iconSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/menu_quantity"
                app:layout_constraintTop_toBottomOf="@id/food_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>